Tester/rgeny_tester/logs/0003/vector/insert/result.err
srcs/vector/modifiers/insert.cpp:60:5: error: no member named 'insert' in 'ft::vector<int>'
                v.insert(v.begin() + pos, count, value);
                ~ ^
srcs/vector/modifiers/insert.cpp:103:2: note: in instantiation of function template specialization '_test<int, ft::vector<int> >' requested here
        _test<int>      (v, 0, 3, 0);
        ^
srcs/vector/modifiers/insert.cpp:89:5: error: no member named 'insert' in 'ft::vector<int>'
                v.insert(v.begin() + pos, v2.begin() + first, v2.end() - last);
                ~ ^
srcs/vector/modifiers/insert.cpp:112:2: note: in instantiation of function template specialization '_test<int, ft::vector<int> >' requested here
        _test<int>      (v2, 0, v, 0, 0);
        ^
srcs/vector/modifiers/insert.cpp:32:5: error: no member named 'insert' in 'ft::vector<int>'
                v.insert(v.begin() + pos, value);
                ~ ^
srcs/vector/modifiers/insert.cpp:120:2: note: in instantiation of function template specialization '_test<int, ft::vector<int> >' requested here
        _test<int>      (v, 0, 7);
        ^
3 errors generated.
make: *** [Makefile:62: objs/srcs/vector/modifiers/ft_insert.o] Error 1
valgrind: ./exe/srcs/vector/modifiers/ft_insert: No such file or directory
